--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,26 @@
 CMemoryLeaker.md
 .vscode
+*.o
+*.obj
+libprofiler.so
+
+tests/test_simple_leak
+tests/test_no_leak
+tests/test_complex_leak
+tests/test_double_free
+tests/test_invalid_free
+tests/test_no_fd_leak
+tests/test_fd_leak
+tests/test_fd_invalid_free
+tests/test_fd_no_leak
+tests/test_file_leak
+
+
+
+__pycache__/
+*.pyc
+
+.vscode/
+
+*.json
+*.txt
